--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,31 +1,10 @@
-// variables
+@import "./variables.scss";
+@import "./reset.scss";
+@import "./mixins.scss";
+@import "./functions.scss";
 
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&family=Ubuntu:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
-
-$scheme-navy-blue: #858aba;
-$scheme-white: #fcfcfc;
-$scheme-gold: #cdc4a7;
-$scheme-dark-gray: #9e9097;
-$scheme-black: #1e1c25;
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.app-container {
-  width: 100vw;
-  min-height: 100vh;
-  background-color: $scheme-navy-blue;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
-  position: relative;
-  overflow: hidden;
-}
 
 .main {
   margin: 0 auto;
@@ -37,177 +16,21 @@ $scheme-black: #1e1c25;
   color: $scheme-dark-gray;
   font-weight: medium;
   z-index: 40;
+  max-height: 100%;
+  overflow-x: hidden;
+  position: relative;
 
-  h1 {
-    font-weight: 500;
-  }
-}
-
-.top-bar {
-  width: 100%;
-  display: flex;
-  height: 3rem;
-  align-items: center;
-  justify-content: end;
-  padding: 1rem 3rem;
-
-  .nav {
-    display: flex;
-    gap: 1rem;
-
-    button {
-      background-color: transparent;
-      font-family: "Ubuntu", sans-serif;
-      border: none;
-      cursor: pointer;
-      font-size: 1.1rem;
-      font-weight: 500;
-      color: $scheme-dark-gray;
-    }
-  }
-}
-
-.content {
-  padding: 3rem;
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-
-  .landing-text {
-    font-size: 2rem;
-    letter-spacing: -3%;
-    line-height: 1.3;
-    color: $scheme-dark-gray;
-    font-weight: 700;
-    max-width: 55ch;
-    font-family: "EB Garamond", serif;
-
-    span {
-      color: $scheme-gold;
-      font-weight: 900;
-    }
+  &::-webkit-scrollbar {
+    width: 0.5em;
   }
 
-  .landing-button-wrapper {
-    display: flex;
-    gap: 2rem;
-
-    button {
-      font-size: 1.1rem;
-      width: 10rem;
-      padding: 0.5rem 0;
-      background-color: transparent;
-      border: 1px solid $scheme-navy-blue;
-      color: $scheme-navy-blue;
-      cursor: pointer;
-      border-radius: 0.5rem;
-
-      &.primary-cta {
-        background-color: $scheme-navy-blue;
-        color: $scheme-white;
-      }
-    }
-  }
-}
-
-@mixin sp-layout {
-  @media screen and (max-width: 750px) {
-    @content;
-  }
-}
-
-@function random_range($min, $max) {
-  $rand: random();
-  $random_range: $min + floor($rand * (($max - $min) + 1));
-  @return $random_range;
-}
-
-.stars {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 120%;
-  transform: rotate(-45deg) scale(1.6);
-}
-
-.star {
-  $star-count: 5;
-  --star-tail-length: 6em;
-  --star-tail-height: 2px;
-  --star-width: calc(var(--star-tail-length) / 6);
-  --fall-duration: 3;
-  --tail-fade-duration: var(--fall-duration);
-
-  position: absolute;
-  opacity: 0;
-  top: var(--top-offset);
-  left: 0;
-  width: var(--star-tail-length);
-  height: var(--star-tail-height);
-  color: $scheme-white;
-  background: linear-gradient(45deg, currentColor, transparent);
-  border-radius: 50%;
-  filter: drop-shadow(0 0 6px currentColor);
-  transform: translate3d(104em, 0, 0);
-  animation: fall var(--fall-duration) var(--fall-delay) linear infinite,
-    tail-fade var(--tail-fade-duration) var(--fall-delay) ease-out infinite;
-
-  @include sp-layout {
-    // For mobile performance, tail-fade animation will be removed QAQ
-    animation: fall var(--fall-duration) var(--fall-delay) linear infinite;
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: $scheme-white;
   }
 
-  @for $i from 1 through $star-count {
-    &:nth-child(#{$i}) {
-      --star-tail-length: #{calc(random_range(500em, 750em) / 100)};
-      --top-offset: #{calc(random_range(0vh, 10000vh) / 100)};
-      --fall-duration: #{calc(random_range(12000, 24000s) / 1000)};
-      --fall-delay: #{calc(random_range(0, 10000s) / 1000)};
-    }
-  }
-
-  &::before,
-  &::after {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: calc(var(--star-width) / -2);
-    width: var(--star-width);
-    height: 100%;
-    background: linear-gradient(45deg, transparent, currentColor, transparent);
-    border-radius: inherit;
-    animation: blink 2s linear infinite;
-  }
-}
-
-@keyframes fall {
-  to {
-    transform: translate3d(-30em, 0, 0);
-  }
-}
-
-@keyframes tail-fade {
-  0%,
-  50% {
-    width: var(--star-tail-length);
-    opacity: 1;
-  }
-
-  70%,
-  80% {
-    width: 0;
-    opacity: 0.4;
-  }
-
-  100% {
-    width: 0;
-    opacity: 0;
-  }
-}
-
-@keyframes blink {
-  50% {
-    opacity: 0.6;
+  &::-webkit-scrollbar-thumb {
+    background-color: $scheme-navy-blue;
+    outline: 1px solid $scheme-navy-blue;
   }
 }
