--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,4 +1,5 @@
 $scheme-navy-blue: #858aba;
+$scheme-dark-blue: #5c61af;
 $scheme-white: #fcfcfc;
 $scheme-gold: #cdc4a7;
 $scheme-dark-gray: #9e9097;
