--- a/client/src/components/AboutImage/AboutImage.module.scss
+++ b/client/src/components/AboutImage/AboutImage.module.scss
@@ -1,12 +1,21 @@
 .imageContainer {
-  display: flex;
+  display: none;
   justify-content: end;
-  align-items: center;
-  height: 100%;
+  align-self: stretch;
+  padding: 0 2rem;
+
+  @media (min-width: 900px) {
+    display: flex;
+  }
+
+  @media (min-width: 1024px) {
+    padding: 0 3rem;
+  }
 
   img {
-    max-width: 100%;
-    align-self: center;
+    width: auto;
+    height: auto;
+    align-self: flex-start;
     border: 1px solid transparent;
     border-radius: 1rem;
   }
