--- a/client/src/components/ButtonGroupContainer/ButtonGroupContainer.module.scss
+++ b/client/src/components/ButtonGroupContainer/ButtonGroupContainer.module.scss
@@ -1,4 +1,12 @@
 .buttonGroupContainer {
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
+  padding: 0 2rem;
+  overflow: unset;
+  flex-wrap: wrap;
+
+  @media (min-width: 1024px) {
+    padding: 0 3rem;
+    gap: 2rem;
+  }
 }
