--- a/client/src/components/FlexContainer/FlexContainer.module.scss
+++ b/client/src/components/FlexContainer/FlexContainer.module.scss
@@ -1,5 +1,10 @@
 .flexContainer {
   display: flex;
-  gap: 1rem;
-  align-items: center;
+  flex-direction: column;
+  align-items: stretch;
+  height: 100%;
+
+  @media (min-width: 900px) {
+    flex-direction: row;
+  }
 }
