--- a/client/src/components/PageContentContainer/PageContentContainer.module.scss
+++ b/client/src/components/PageContentContainer/PageContentContainer.module.scss
@@ -1,8 +1,11 @@
 .pageContentContainer {
-  padding: 3rem;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
   overflow-x: hidden;
-  max-height: 100%;
+  overflow-y: auto;
+  padding: 3rem 0;
+
+  @media (min-width: 1024px) {
+    padding: 3rem 0;
+  }
 }
