--- a/client/src/components/PageText/PageText.module.scss
+++ b/client/src/components/PageText/PageText.module.scss
@@ -2,4 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 0 2rem;
+
+  @media (min-width: 1024px) {
+    padding: 0 3rem;
+  }
 }
