--- a/client/src/components/SkillsList/SkillsList.module.scss
+++ b/client/src/components/SkillsList/SkillsList.module.scss
@@ -2,9 +2,19 @@
 
 .skillsListContainer {
   flex: 1;
+  display: none;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  align-self: stretch;
+  padding: 0 2rem;
+
+  @media (min-width: 900px) {
+    display: flex;
+  }
+
+  @media (min-width: 1024px) {
+    padding: 0 3rem;
+  }
 }
 
 .skillsList {
@@ -13,9 +23,10 @@
   gap: 1rem;
   flex-wrap: wrap;
   justify-content: center;
+  overflow: unset;
 
   li {
-    font-size: 1.1rem;
+    font-size: 1rem;
     padding: 0.5rem 1rem;
     background-color: $scheme-gold;
     color: $scheme-white;
@@ -24,5 +35,6 @@
     border: 1px solid $scheme-gold;
     border-radius: 0.5rem;
     box-shadow: 0 0.1rem 0.2rem $scheme-dark-gray;
+    overflow: unset;
   }
 }
