--- a/client/src/modules/Header/Header.module.scss
+++ b/client/src/modules/Header/Header.module.scss
@@ -6,10 +6,14 @@
   height: 5rem;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 3rem;
+  padding: 1rem 2rem;
   position: sticky;
   top: 0;
   background-color: $scheme-white;
+
+  @media (min-width: 1024px) {
+    padding: 1rem 3rem;
+  }
 
   .logoButton {
     background-color: transparent;
@@ -18,21 +22,48 @@
 
     img {
       height: 3rem;
+      width: auto;
     }
   }
 
   .nav {
-    display: flex;
+    display: none;
     gap: 1rem;
+
+    @media (min-width: 600px) {
+      display: flex;
+    }
 
     button {
       background-color: transparent;
       font-family: "Ubuntu", sans-serif;
       border: none;
       cursor: pointer;
-      font-size: 1.1rem;
-      font-weight: 500;
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.15rem;
+      font-weight: 700;
       color: $scheme-dark-gray;
+      transition-property: all;
+      transition-duration: 0.2s;
+
+      &.primary {
+        background-color: $scheme-navy-blue;
+        color: $scheme-white;
+        padding: 0.5rem 1rem;
+        border-radius: 0.5rem;
+        border: 1px solid $scheme-navy-blue;
+
+        &:hover {
+          background-color: $scheme-dark-blue;
+          border: 1px solid $scheme-dark-blue;
+          transform: scale(1.05);
+        }
+      }
+
+      &.active {
+        color: $scheme-navy-blue;
+      }
     }
   }
 }
