--- a/client/src/modules/Landing/Landing.module.scss
+++ b/client/src/modules/Landing/Landing.module.scss
@@ -8,6 +8,12 @@
   font-weight: 700;
   max-width: 55ch;
   font-family: "EB Garamond", serif;
+  padding: 0 2rem;
+  margin-bottom: 2rem;
+
+  @media (min-width: 1024px) {
+    padding: 0 3rem;
+  }
 
   span {
     color: $scheme-gold;
