--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -3,7 +3,7 @@
 @import "./mixins.scss";
 @import "./functions.scss";
 
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&family=Ubuntu:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 .main {
@@ -18,6 +18,7 @@
   z-index: 40;
   max-height: 100%;
   overflow-x: hidden;
+  overflow-y: unset;
   position: relative;
 
   &::-webkit-scrollbar {
