--- a/client/src/styles/mixins.scss
+++ b/client/src/styles/mixins.scss
@@ -21,10 +21,21 @@
 }
 
 @mixin main-button {
-  font-size: 1.1rem;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 0.15rem;
   width: 10rem;
   padding: 0.5rem 0;
   border: 1px solid $scheme-navy-blue;
   cursor: pointer;
   border-radius: 0.5rem;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  transition-property: all;
+  transition-duration: 0.1s;
+  overflow: unset;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
