--- a/client/src/components/ButtonGroupContainer/ButtonGroupContainer.module.scss
+++ b/client/src/components/ButtonGroupContainer/ButtonGroupContainer.module.scss
@@ -4,9 +4,13 @@
   padding: 0 2rem;
   overflow: unset;
   flex-wrap: wrap;
+  justify-content: center;
+
+  @media (min-width: 900px) {
+    justify-content: flex-start;
+  }
 
   @media (min-width: 1024px) {
     padding: 0 3rem;
-    gap: 2rem;
   }
 }
