--- a/client/src/components/FlexContainer/FlexContainer.module.scss
+++ b/client/src/components/FlexContainer/FlexContainer.module.scss
@@ -1,10 +1,12 @@
 .flexContainer {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
+  justify-content: space-between;
   height: 100%;
 
   @media (min-width: 900px) {
     flex-direction: row;
+    align-items: stretch;
   }
 }
