--- a/client/src/components/PageTextSection/PageTextSection.module.scss
+++ b/client/src/components/PageTextSection/PageTextSection.module.scss
@@ -1,6 +1,11 @@
 .pageTextSection {
-  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  max-width: 65ch;
+  text-align: center;
+
+  @media (min-width: 900px) {
+    text-align: start;
+  }
 }
