--- a/client/src/components/SkillsList/SkillsList.module.scss
+++ b/client/src/components/SkillsList/SkillsList.module.scss
@@ -6,14 +6,14 @@
   justify-content: center;
   align-items: center;
   align-self: stretch;
-  padding: 0 2rem;
+  padding-right: 2rem;
 
   @media (min-width: 900px) {
     display: flex;
   }
 
   @media (min-width: 1024px) {
-    padding: 0 3rem;
+    padding-right: 3rem;
   }
 }
 
