--- a/client/src/modules/Contact/Contact.module.scss
+++ b/client/src/modules/Contact/Contact.module.scss
@@ -2,28 +2,53 @@
 
 .contactTextSection {
   flex: 1;
+  text-align: center;
+
+  @media (min-width: 900px) {
+    text-align: start;
+  }
 }
 
 .contactFormSection {
   flex: 1;
-  padding: 0 2rem;
+  padding: 2rem;
+
+  @media (min-width: 900px) {
+    padding: 0 2rem;
+    flex: 1;
+  }
 
   @media (min-width: 1024px) {
-    padding: 0 2rem;
+    padding: 0 3rem;
   }
 }
 
 .form {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
-  width: 100%;
+  max-width: 55ch;
+
+  @media (min-width: 900px) {
+    align-items: flex-start;
+  }
+}
+
+.formControl {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.errorMessage {
+  color: $scheme-black;
 }
 
 .formInput {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid $scheme-dark-gray;
   font-family: "Ubuntu", sans-serif;
   width: 100%;
   resize: none;
