--- a/client/src/modules/Header/Header.module.scss
+++ b/client/src/modules/Header/Header.module.scss
@@ -10,6 +10,8 @@
   position: sticky;
   top: 0;
   background-color: $scheme-white;
+  transition-property: all;
+  transition-duration: 0.3s;
 
   @media (min-width: 1024px) {
     padding: 1rem 3rem;
@@ -21,8 +23,28 @@
     cursor: pointer;
 
     img {
-      height: 3rem;
+      height: 2.5rem;
       width: auto;
+    }
+  }
+
+  .mobileMenuButton {
+    color: $scheme-dark-gray;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+
+    svg {
+      height: 2.5rem;
+      width: auto;
+    }
+
+    &:hover {
+      color: $scheme-dark-blue;
+    }
+
+    @media (min-width: 600px) {
+      display: none;
     }
   }
 
@@ -66,4 +88,8 @@
       }
     }
   }
+}
+
+.scrollingHeader {
+  box-shadow: 0 0.5rem 1rem $scheme-dark-gray;
 }
