--- a/client/src/modules/Landing/Landing.module.scss
+++ b/client/src/modules/Landing/Landing.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles//variables.scss";
 
 .landingText {
-  font-size: 2rem;
+  font-size: 1.5rem;
   letter-spacing: -3%;
   line-height: 1.3;
   color: $scheme-dark-gray;
@@ -10,6 +10,16 @@
   font-family: "EB Garamond", serif;
   padding: 0 2rem;
   margin-bottom: 2rem;
+  text-align: center;
+
+  @media (min-width: 600px) {
+    font-size: 2rem;
+  }
+
+  @media (min-width: 900px) {
+    text-align: start;
+    font-size: 2rem;
+  }
 
   @media (min-width: 1024px) {
     padding: 0 3rem;
