--- a/client/src/modules/Projects/Projects.module.scss
+++ b/client/src/modules/Projects/Projects.module.scss
@@ -1,16 +1,25 @@
 @import "../../styles/variables.scss";
 
-.projectsOuterContainer {
-  box-shadow: 0 0.1rem 0.2rem $scheme-dark-gray;
-
-  .pageContentContainer {
-    background-color: $scheme-gold;
-  }
-}
 .projectsTextSection {
   flex: 1;
   padding: 2rem 0;
-  width: 60ch;
+  max-width: 60ch;
+
+  img {
+    display: unset;
+    align-self: center;
+    box-shadow: 0 0.25rem 0.5rem $scheme-dark-gray;
+    width: 300px;
+    height: auto;
+
+    @media (min-width: 900px) {
+      display: none;
+    }
+  }
+
+  @media (min-width: 900px) {
+    max-width: unset;
+  }
 
   @media (min-width: 1024px) {
     padding: 3rem 0;
@@ -45,6 +54,8 @@
   }
 
   img {
+    align-self: center;
+    box-shadow: 0 1rem 2rem $scheme-dark-gray;
     width: 300px;
     height: auto;
   }
@@ -61,6 +72,8 @@
   }
 
   img {
+    align-self: center;
+    box-shadow: 0 1rem 2rem $scheme-dark-gray;
     width: 300px;
     height: auto;
   }
@@ -77,6 +90,8 @@
   }
 
   img {
+    align-self: center;
+    box-shadow: 0 1rem 2rem $scheme-dark-gray;
     width: 300px;
     height: auto;
   }
