--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -12,7 +12,6 @@
   width: 100%;
   background-color: $scheme-white;
   box-shadow: 0 0.5rem 1rem $scheme-black;
-  border-radius: 0.5rem;
   color: $scheme-dark-gray;
   font-weight: medium;
   z-index: 40;
@@ -20,18 +19,23 @@
   overflow-x: hidden;
   overflow-y: unset;
   position: relative;
+  border-radius: 0.5rem;
 
-  &::-webkit-scrollbar {
-    width: 0.5em;
-  }
+  @media (min-width: 600px) {
+    border-radius: 0.5rem;
 
-  &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: $scheme-white;
-  }
+    &::-webkit-scrollbar {
+      width: 0.5em;
+    }
 
-  &::-webkit-scrollbar-thumb {
-    background-color: $scheme-navy-blue;
-    outline: 1px solid $scheme-navy-blue;
+    &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      background-color: $scheme-white;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $scheme-navy-blue;
+      outline: 1px solid $scheme-navy-blue;
+    }
   }
 }
