--- a/client/src/styles/mixins.scss
+++ b/client/src/styles/mixins.scss
@@ -34,6 +34,7 @@
   transition-property: all;
   transition-duration: 0.1s;
   overflow: unset;
+  text-align: center;
 
   &:hover {
     transform: scale(1.05);
