refactored into more sensible code accounting for the router

--- a/client/src/modules/Header/Header.module.scss
+++ b/client/src/modules/Header/Header.module.scss
@@ -56,7 +56,12 @@
       display: flex;
     }
 
-    button {
+    button,
+    a {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      text-align: center;
       background-color: transparent;
       font-family: "Ubuntu", sans-serif;
       border: none;
