--- a/client/src/styles/mixins.scss
+++ b/client/src/styles/mixins.scss
@@ -21,6 +21,7 @@
 }
 
 @mixin main-button {
+  will-change: contents; // fixes an issue with button transitions on chromium browsers
   font-size: 0.8rem;
   text-transform: uppercase;
   letter-spacing: 0.15rem;
@@ -35,6 +36,7 @@
   transition-duration: 0.1s;
   overflow: unset;
   text-align: center;
+  display: inline-table;
 
   &:hover {
     transform: scale(1.05);
