--- a/client/src/components/AppBackground/AppBackground.module.scss
+++ b/client/src/components/AppBackground/AppBackground.module.scss
@@ -9,6 +9,7 @@
   width: 100%;
   height: 120%;
   transform: rotate(-45deg) scale(1.6);
+  will-change: contents;
 }
 
 .star {
@@ -19,6 +20,7 @@
   --fall-duration: 3;
   --tail-fade-duration: var(--fall-duration);
 
+  will-change: contents;
   position: absolute;
   opacity: 0;
   top: var(--top-offset);
