--- a/client/src/styles/functions.scss
+++ b/client/src/styles/functions.scss
@@ -1,5 +1,6 @@
+@use "sass:math";
 @function random_range($min, $max) {
-  $rand: random();
-  $random_range: $min + floor($rand * (($max - $min) + 1));
+  $rand: math.random();
+  $random_range: $min + math.floor($rand * (($max - $min) + 1));
   @return $random_range;
 }
