--- a/client/src/modules/Main/Main.module.scss
+++ b/client/src/modules/Main/Main.module.scss
@@ -13,7 +13,7 @@
   overflow-y: unset;
   position: relative;
   border-radius: 0.5rem;
-  box-shadow: 0 0.5rem 1rem $scheme-black;
+  box-shadow: 0 0.5rem 1rem $scheme-dark-blue;
 
   @media (min-width: 600px) {
     border-radius: 0.5rem;
