--- a/client/src/styles/reset.scss
+++ b/client/src/styles/reset.scss
@@ -1,3 +1,5 @@
+@use "variables.scss" as *;
+
 * {
   margin: 0;
   padding: 0;
@@ -7,4 +9,5 @@
 html,
 body {
   height: 100vh;
+  background-color: $scheme-navy-blue;
 }
